test/expect/cmd.rsp-missing.stderr.txt
^error: no such file or directory: '@.*/test/input/does-not-exist.rsp'
error: no input files$
